--- a/part2/telephones/src/index.css
+++ b/part2/telephones/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.success{
+  color: greenyellow;
+  background: green;
+  font-size: 1vw;
+  border: solid 1px black;
+  margin-bottom: 2vw;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.error{
+  color: red;
+  font-size: 1vw;
+  border: solid 1px black;
+  margin-bottom: 2vw;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
 }
